# generic-matrix-impl

./: .travis.yml  Cargo.toml  README.md  license.md
src/: lib.rs
